@@ -166,6 +166,15 @@ namespace SolidCP.Portal.VPS2012 {
         protected global::System.Web.UI.WebControls.RequiredFieldValidator RequireHddValidator;
         
         /// <summary>
+        /// hiddenTxtValHdd control.
+        /// </summary>
+        /// <remarks>
+        /// Auto-generated field.
+        /// To modify move field declaration from designer file to code-behind file.
+        /// </remarks>
+        protected global::System.Web.UI.WebControls.HiddenField hiddenTxtValHdd;
+        
+        /// <summary>
         /// locGB control.
         /// </summary>
         /// <remarks>
