@@ -14,6 +14,15 @@ Version 1.4.1:
 - HyperVR2+ fix to delete unused interface - With thanks to Genadij Judin
 - Added VMConfig backward compatibility for the WSPanel - With thanks to Genadij Judin
 - Change to fix Disabled User when Exchange schema is not applied
+- Changed the folder structure for new VM (VPS2012/VPS2016) to the standard Microsoft - With thanks to Genadij Judin
+- Added a simple implementation of Suspend date for Hosting Space. - With thanks to Genadij Judin
+- Added safely removing a VM (VPS2012/VPS2016) from a NODE (now the files of VM are guaranteed to be deleted) - With thanks to Genadij Judin
+- Fixed Quick rename Host Space returned (Only shown for Admin/reseller/helpdesk). - With thanks to Genadij Judin
+- Fixed autoupdate VPS2012/VPS2016 imgThumbnail - With thanks to Genadij Judin
+- Hides the obvious choice of VLAN for creating VPS2012/VPS2016 - With thanks to Genadij Judin
+- HyperV2012R2+ Added Virtual Hard Disk Drive Quality of Service management for VM - With thanks to Genadij Judin
+- some minor fixes for yperV2012R2+ - With thanks to Genadij Judin
+
 
 Version 1.4.0:
 - Added Microsoft SQL 2017 support (Installer & Portal)
